# Kursova

./: Admin.cpp  Admin.h  AuthManager.cpp  AuthManager.h  BasicUser.cpp  BasicUser.h  CMakeLists.txt  Configuration.cpp  Configuration.h  IPrintable.cpp  IPrintable.h  Logger.h  Product.h  Receipt.cpp  Receipt.h  SaleProcessor.cpp  SaleProcessor.h  StoreItem.cpp  StoreItem.h  StoreManager.cpp  StoreManager.h  User.cpp  User.h  main.cpp  store_items.csv
documentation/: Презентація.pptx  документація.docx
